--- a/Client/src/views/Store/Store.module.css
+++ b/Client/src/views/Store/Store.module.css
@@ -157,7 +157,7 @@
 
   .store2 {
     grid-template-columns: 1fr;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
     justify-self: center;
   }
 
